--- a/package.json
+++ b/package.json
@@ -12,14 +12,6 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "extract-text-webpack-plugin": "^3.0.2",
-    "gulp": "^4.0.2",
-    "gulp-rename": "^2.0.0",
-    "manifest-revision-webpack-plugin": "^0.4.1",
-    "nodemon": "^2.0.2",
-    "webpack": "^5.54.0"
-  },
   "dependencies": {
     "@babel/core": "^7.15.5",
     "accessible-autocomplete": "^2.0.3",
@@ -28,13 +20,17 @@
     "browser-sync": "^2.26.14",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gulp": "^4.0.2",
     "gulp-connect": "2.3.1",
+    "gulp-rename": "^2.0.0",
     "gulp-watch": "^5.0.1",
     "jquery": "^3.6.0",
     "jquery.fancytree": "^2.38.0",
-    "nhsuk-frontend": "^4.1.0",
+    "nhsuk-frontend": "^8.0.0",
+    "nodemon": "^2.0.2",
     "nunjucks": "^3.2.3",
     "pa11y-ci": "^2.4.1",
-    "pa11y-ci-reporter-html": "^2.1.3"
+    "pa11y-ci-reporter-html": "^2.1.3",
+    "webpack": "^5.54.0"
   }
 }
