--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@babel/core": "^7.15.5",
     "accessible-autocomplete": "^2.0.4",
-    "babel-loader": "^8.2.2",
     "basic-auth": "^2.0.1",
     "browser-sync": "^2.26.14",
     "dotenv": "^8.2.0",
@@ -32,5 +31,8 @@
     "pa11y-ci": "^2.4.1",
     "pa11y-ci-reporter-html": "^2.1.3",
     "webpack": "^5.54.0"
+  },
+  "devDependencies": {
+    "babel-loader": "^9.2.1"
   }
 }
