--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.x"
-  },
+  "node": "20.x",
+  "npm": "10.x"
+},
   "scripts": {
     "dev": "gulp",
     "start": "node index.js"
